#8 fix: 판매글 목록 조회 시 판매중 글 뒤에 판매완료 글 배치